--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -116,6 +116,7 @@
     <string name="DETAILS">تفاصيل</string>
     <string name="FAILED">فشل</string>
     <string name="image_of">%1$d of %2$d</string>
+    <string name="pref_title_language">عربية</string>
 
 
 </resources>
