--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -86,7 +86,7 @@
 
     <!--=== activity Splash ==================================================================== -->
     <string name="splash_welcome_text">BIENVENU</string>
-    <string name="splash_desc_text">Parcourez tous les endroits intéressants en utilisant l\\\\\'application Casablanca GuideS</string>
+    <string name="splash_desc_text">Parcourez tous les endroits intéressants en utilisant l\'application Casablanca GuideS</string>
 
     <!--=== fragment Category ================================================================== -->
     <string name="refresh_failed">Refresh failed</string>
@@ -113,7 +113,10 @@
     <string name="DETAILS">DÉTAILS</string>
     <string name="FAILED">ÉCHOUÉ</string>
     <string name="image_of">%1$d de %2$d</string>
-    <string name="pref_title_language">Français</string>
+    <string name="pref_title_language">Langue de l\'application</string>
+    <string name="lang_dialog_message" > Il faut impérativement redémarrer l\'application pour que la modification  prenne effet </string>
+    <string name="change_lang_dialog_button">Changer</string>
+    <string name="cancel_lang_dialog_button">Annuler</string>
 
 
 </resources>
